Add core structure for home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
     <title>Punting Brothers</title>
 </head>
 <body>
-    
+    <header>
+        header content - nav bar
+    </header>
+    <section>
+        main image
+    </section>
+
+    <section>
+        about
+    </section>
+
+    <section>
+        history
+    </section>
+
+    <section>
+        services
+    </section>
+
+    <section>
+        reviews
+    </section>
+
+    <footer>
+        contact info, map and social links 
+    </footer>
+
 </body>
 </html>
