Add gallery and services pages. Add basic header structure

--- a/index.html
+++ b/index.html
@@ -12,8 +12,27 @@
 </head>
 <body>
     <header>
-        header content - nav bar
+        <a href="index.hmtl">
+            <h1>The Punting Brothers</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">History</a>
+                </li>
+                <li>
+                    <a href="services.html">Services</a>
+                </li>
+                <li>
+                    <a href="gallery.html">Gallery</a>
+                </li>
+            </ul>
+        </nav>
     </header>
+
     <section>
         main image
     </section>
