--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="index.hmtl">
+        <a href="index.html">
             <h1>The Punting Brothers</h1>
         </a>
         <nav>
